src/assets/main.scss
@import './base.css';
@import './multiselect.scss';
@import './scrollbar.scss';

/*h5 {*/ /*  background: #c6d081;*/ /*}*/

span,
p,
h1,
h2,
h3,
h4,
h5 {
  color: #333333;
}
.templ {
  background: #dfe4bd;
}
.scondButton {
  background: #15803d;
  border: none !important;
  color: white !important;
}

.header-separator {
  font-family: Bahnschrift;
  position: relative;
  display: flex;

  &::before,
  &::after {
    content: '';
    flex: 1;
    @apply border-b;
    @apply border-b-zinc-300;
    margin: auto 1rem;
    //box-shadow: 0 -2px;
  }
}
@layer utilities {
  .hamburger-toggle {
    @apply [&>div]:h-0 [&>div]:bg-transparent [&>div]:before:translate-y-0 [&>div]:before:rotate-45 [&>div]:after:translate-y-0 [&>div]:after:-rotate-45;
  }
}

